Issue #2973737 by rahulrasgon, bandanasharma, Sreenivas Bttv: Spacing out the links in comments section

--- a/src/sass/layout/_article.scss
+++ b/src/sass/layout/_article.scss
@@ -49,7 +49,7 @@ article {
 
     li {
       list-style: none;
-      display: inline-flex;
+      display: block;
       padding-left: rem(16px);
 
       &:first-child {
